CIV-15281 sonar issues